--- a/_config.yml
+++ b/_config.yml
@@ -168,7 +168,7 @@ social:
 pages_list:
   About: 'about'
   Blog: 'latest-post'
-  Timeline: 'timeline'
+  Timeline: 'Projects'
   Contact: 'contact'
 
 # Exclusion list from the generated _site
