--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,7 @@ timeline-img: "/img/timeline/default.png"
 # Contact #
 ###########
 
-email: "ryanmspeed@email.here"
+email: "ryanmspeed@gmail.com"
 
 ################
 # Author Blurb #
